tests/core/data/csl/InterfaceTests/InvalidDeclarations/invalidInterfaceWithExceptionAsParameter.csl
/*
	Invalid interface to verifiy that exceptions cannot be passed as parameters in methods
 */
interface invalidInterfaceWithExceptionAsParameter
{
	void beta( in Global.AnotherException ex );
};


